--- a/_data/sg-group.yml
+++ b/_data/sg-group.yml
@@ -1,6 +1,6 @@
 current:
 - text:
-    de: "**Harry Enke** (Sprecher) leitet die E-Science Gruppe am [Leibniz-Institut für Astrophysik Potsdam (AIP)](https://www.leibniz-gemeinschaft.de/ueber-uns/organisation/gremien)."
+    de: "**Harry Enke** (Sprecher) leitet die E-Science-Gruppe am [Leibniz-Institut für Astrophysik Potsdam (AIP)](https://www.leibniz-gemeinschaft.de/ueber-uns/organisation/gremien)."
     en: "**Harry Enke** (Speaker) leads the E-Science group at [Leibniz-Institut für Astrophysik Potsdam (AIP)](http://www.aip.de). He works for building digital infrastructures for research data in astrophysics. Also, he is spokesperson for the [Arbeitskreis Forschungsdaten (WG Research Data) of the Leibniz Gemeinschaft](https://www.leibniz-gemeinschaft.de/ueber-uns/organisation/gremien)."
   image: img/team/enke.jpg
 
@@ -15,8 +15,8 @@ current:
   image: img/team/hausen.jpg
 
 - text:
-    de: "**Gerald Jagusch** (Sprecher) ist Referent an der [Bibliothek der TU Darmstadt](https://www.ulb.tu-darmstadt.de/) und leitet dort das Team Forschungsdaten-Services. Sein Interesse liegt u.a. im Forschungsdatenmanagement für die Ingenieurwissenschaften."
-    en: "**Gerald Jagusch** (Speaker) works as consultant at the [Library of TU Darmstadt](https://www.ulb.tu-darmstadt.de/service/start/index.en.jsp) leading the Reserach Data Services team. He is interested, among otherthings, in Research Data Management for engineering sciences."
+    de: "**Gerald Jagusch** (Sprecher) leitet die Abteilung für IT, Forschung & Entwicklung an der [Universitäts- und Landesbibliothek Darmstadt](https://www.ulb.tu-darmstadt.de/). Seine Interessen liegen u.a. im Forschungsdatenmanagement für die Ingenieurwissenschaften."
+    en: "**Gerald Jagusch** (Speaker) leads the department for IT, Research & Developemnt at the [University and State Library Darmstadt](https://www.ulb.tu-darmstadt.de/die_bibliothek/index.en.jsp). He is interested, among other things, in research data management for the engineering sciences."
   image: img/team/jagusch.jpg
 
 - text:
@@ -24,7 +24,3 @@ current:
     en: "**Birte Lindstädt** is Deputy Head leading the section Research Data Management at [ZB MED - Information Centre for Life Sciences](https://www.zbmed.de/en/). She is responsible for information infrastructures for reserach data, and services for research data management."
   image: img/team/lindstaedt.jpg
 
-- text:
-    de: "**Robert Strötgen** ist stellvertretender Direktor der [Universitätsbibliothek der TU Braunschweig](https://www.tu-braunschweig.de/ub) und Leiter der Abteilung IT und Forschungsnahe Services. Dort verantwortet er auch das Thema Forschungsdatenmanagement. Im Bereich Open Source engagiert er sich unter anderem seit 2012 für 'Kitodo. Key to digital objects e.V.', dessen Vorstandsvorsitzender er ist."
-    en: "**Robert Strötgen** is Deputy Director of the [University Library of the TU Braunschweig](https://www.tu-braunschweig.de/en/ub) and Head of the IT and Research Support Services department. He is also responsible for research data management. In the area of open source, since 2012 he has been involved in projects such as 'Kitodo. Key to digital objects e.V.', of which he is chairman of the board."
-  image: img/team/stroetgen.jpg
